# simba

./: CMakeLists.txt  README.md  main.cpp
include/: command_line.h  concurrency.h  file.h  global.h  memory_mapped_region.h  parser.h  pcap.h  print_strings.h  simba.h  simba_types.h  tools.h  worker.h
source/: command_line.cpp  concurrency.cpp  file.cpp  memory_mapped_region.cpp  parser.cpp  tools.cpp  worker.cpp
tests/: CMakeLists.txt  pcap_test.cpp  simba_test.cpp
